[project]
name = "sample-uv-service"
version = "0.1.0"
description = "A sample Python service using uv without a committed lock file"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.30.1",
    "pydantic==2.7.1",
    "httpx==0.27.0",
    "sqlalchemy==2.0.30",
    "alembic==1.13.1",
    "redis==5.0.4",
    "structlog==24.1.0",
    "rich==13.7.1",
    "boto3==1.34.0",
    "click~=8.1",
    "requests[security]>=2.31,<3",
    "anyio (>=4,<5)",
    "importlib-metadata>=7,<8; python_version < '3.12'",
    "urllib3>=1.26,<2",
    "celery==5.3.*",
    "django!=4.2.0",
    "orjson==3.10.0; platform_python_implementation == 'CPython'",
    "humanize",
    "sample-direct-ref @ https://example.com/sample-direct-ref-0.1.0.tar.gz",
    "legacy-parser===1.0-local",
]

[project.optional-dependencies]
cli = [
    "typer==0.12.3",
    "shellingham>=1.5,<2",
]
docs = [
    "mkdocs~=1.6",
    "mkdocs-material>=9.5,<10",
]

[dependency-groups]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.7",
    "ruff==0.4.4",
    "mypy==1.10.0",
    "httpx==0.27.0",
    "coverage>=7.5,<8",
    "types-requests>=2.31,<3",
]
test = [
    "hypothesis>=6.100,<7",
    "pytest-cov~=5.0",
    "requests>=2.31,<3",
]
lint = [
    "bandit>=1.7,<2",
    "urllib3>=2,<3",
]

[tool.uv]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
